<resources>
    <string name="app_name">TODOapp</string>
    <string name="facebook_app_id">822765724530771</string>
    <string name="fb_authentication_failed">Autentication fallida debido: %s</string>
    <string name="toolbar_title_detail">Detalle</string>
    <string name="txt_task_category">Categoria</string>
    <string name="txt_task_date">Fecha</string>
    <string name="txt_task_color">Color</string>
    <string name="txt_task_description">Descripción</string>
    <string name="action_share_link_task">Compartir</string>
    <string name="action_delete_task">Eliminar</string>
    <string name="action_edit_link_task">Editar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title_edit">Editar</string>
    <string name="txt_task_title">Titulo</string>
    <string name="txt_task_latitude">Latitude</string>
    <string name="txt_task_longitude">Longitude</string>
    <string name="txt_task_unknow">Unknow</string>
    <string name="toolbar_title_new_task">New Task</string>
    <string name="action_location">Location</string>
    <string name="txt_stop_update">Stop Update</string>
    <string name="txt_start_update">Start Update</string>
    <string name="txt_options">Optiones</string>
    <string name="txt_move">Move</string>
    <string name="txt_animate">Animate</string>
    <string name="txt_position">Position</string>
    <string name="txt_marker">Marker</string>
    <string name="txt_lines">Lines</string>
    <string name="txt_polygon">Polygon</string>
</resources>
