<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="todo.mobile.com.todoapp.geolocalization.TaskMapActivity">

    <LinearLayout
        android:id="@+id/ly4buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_options"
            />

        <Button
            android:id="@+id/btnMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_move"
            />

        <Button
            android:id="@+id/btnAnimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_animate"
            />

        <Button
            android:id="@+id/btnPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_position"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly3buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly4buttons"
        >

        <Button
            android:id="@+id/btnMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_marker"
            />

        <Button
            android:id="@+id/btnLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lines"
            />

        <Button
            android:id="@+id/btnPolygon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_polygon"
            />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ly3buttons"
        />

</RelativeLayout>
